data/derived/comb/progs/unify/prog4352.ml.out
Characters 87-89:
  sin(pi*.(eval e0))
                ^^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'a
